crates/loxia-tui/src/widgets/snapshots/loxia_tui__widgets__player_bar__tests__player_bar_snapshot_playing.snap
---
source: crates/loxia-tui/src/widgets/player_bar.rs
assertion_line: 469
expression: "render_at(100, &state)"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 100, height: 4 },
    content: [
        "────────────────────────────────────────────────────────────────────────────────────────────────────",
        " ▸ Track 4 — Boy Harsher (Care)                                                                     ",
        " ⏮️  ⏯️  ⏹️  ⏭️  🔀️  🔁️  1:30 ████████████████████████████████░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░ 3:00 ", // hidden by multi-width symbols: [(2, " "), (6, " "), (10, " "), (14, " "), (18, " "), (22, " ")]
        " 🎚 FLAC │ 16-bit/44.1kHz │ Bitrate: 1000 kbps │ Vol: 100% │ EQ: Active [flat]                       ",
    ],
    styles: [
        x: 0, y: 0, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 17, y: 2, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 18, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 21, y: 2, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 22, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 30, y: 2, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 94, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 7, y: 3, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 10, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 24, y: 3, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 27, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 45, y: 3, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 48, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 57, y: 3, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 60, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
